; ModuleID = '/home/carl/AnghaBench/freebsd/sbin/ifconfig/extr_ifieee80211.c_set80211stationname.c'
source_filename = "/home/carl/AnghaBench/freebsd/sbin/ifconfig/extr_ifieee80211.c_set80211stationname.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.afswtch = type { i32 }

@IEEE80211_IOC_STATIONNAME = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32, i32, %struct.afswtch*)* @set80211stationname to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set80211stationname(i8* %0, i32 %1, i32 %2, %struct.afswtch* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.afswtch*, align 8
  %9 = alloca i32, align 4
  %10 = alloca [33 x i32], align 16
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store %struct.afswtch* %3, %struct.afswtch** %8, align 8
  %11 = getelementptr inbounds [33 x i32], [33 x i32]* %10, i64 0, i64 0
  %12 = call i32 @bzero(i32* %11, i32 132)
  store i32 132, i32* %9, align 4
  %13 = load i8*, i8** %5, align 8
  %14 = getelementptr inbounds [33 x i32], [33 x i32]* %10, i64 0, i64 0
  %15 = call i32 @get_string(i8* %13, i32* null, i32* %14, i32* %9)
  %16 = load i32, i32* %7, align 4
  %17 = load i32, i32* @IEEE80211_IOC_STATIONNAME, align 4
  %18 = load i32, i32* %9, align 4
  %19 = getelementptr inbounds [33 x i32], [33 x i32]* %10, i64 0, i64 0
  %20 = call i32 @set80211(i32 %16, i32 %17, i32 0, i32 %18, i32* %19)
  ret void
}

declare dso_local i32 @bzero(i32*, i32) #1

declare dso_local i32 @get_string(i8*, i32*, i32*, i32*) #1

declare dso_local i32 @set80211(i32, i32, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
